--- a/css/mycss_mobile.css
+++ b/css/mycss_mobile.css
@@ -13,7 +13,7 @@
 }
 
 h1{
-  color: black;
+  color: #000;
   text-align: center;
 }
 
@@ -65,14 +65,6 @@ a.a{
   display: block;
   color:#ffff;
 }
-a.a:hover{
-  background-color: #111;
-}
-
-
-li a.a:hover {
-  background-color: #111;
-}
 
 .aboutme_table>table{
   border: 3px solid white;
@@ -90,11 +82,6 @@ li a.a:hover {
 
 .aboutme_table>table td{
   background-color: #fffb96;
-}
-
-.aboutme_table>table td:hover{
-  background-color: #05ffa1;
-  color: #b967ff;
 }
 
 @media print {
